--- a/paper/citations.bib
+++ b/paper/citations.bib
@@ -46,3 +46,56 @@
   biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/RadevZWAGKDWBBD16},
   bibsource = {dblp computer science bibliography, http://dblp.org}
 }
+
+@article{nyt_xword,
+    title     = "The New York Times Crossword",
+    journal   = "The New York Times",
+    editor    = "Will Shortz",
+    year      = "1996-2012",
+}
+
+@misc{nyt_xword_db,
+    author    = "Michael Donohoe",
+    title     = "NYTimes Crossword Data",
+    year      = "2013",
+    month     = "January",
+    url       = "https://github.com/donohoe/nyt-crossword"
+}
+
+@misc{nyt_xword_db,
+    author    = "Evoluted New Media",
+    title     = "crosswordsolver.org",
+    year      = "2017",
+    month     = "January",
+    url       = "http://www.crosswordsolver.org/clues/",
+}
+
+@article{Hochreiter:1997:LSM:1246443.1246450,
+ author = {Hochreiter, Sepp and Schmidhuber, J\"{u}rgen},
+ title = {Long Short-Term Memory},
+ journal = {Neural Comput.},
+ issue_date = {November 15, 1997},
+ volume = {9},
+ number = {8},
+ month = nov,
+ year = {1997},
+ issn = {0899-7667},
+ pages = {1735--1780},
+ numpages = {46},
+ url = {http://dx.doi.org/10.1162/neco.1997.9.8.1735},
+ doi = {10.1162/neco.1997.9.8.1735},
+ acmid = {1246450},
+ publisher = {MIT Press},
+ address = {Cambridge, MA, USA},
+}
+
+@inproceedings{pennington2014glove,
+  author = {Jeffrey Pennington and Richard Socher and Christopher D. Manning},
+  booktitle = {Empirical Methods in Natural Language Processing (EMNLP)},
+  title = {GloVe: Global Vectors for Word Representation},
+  year = {2014},
+  pages = {1532--1543},
+  url = {http://www.aclweb.org/anthology/D14-1162},
+}
+
+
