--- a/report.tex
+++ b/report.tex
@@ -143,22 +143,19 @@ Our first accuracy metric is ratio of correctly predicted words to total number 
 
 \begin{figure}
 	\includegraphics{REAL_topdictdef}
-	\label{Fig 1}
-	\caption{Accuracy of top prediction for the true word corresponding to the dictionary definition.}
+	\caption{Fig. 1: Accuracy of top prediction for the true word corresponding to the dictionary definition.}
 \end{figure}
 
 \begin{figure}
 	\includegraphics{REAL_topcrossclue}
-	\label{Fig 2}
-	\caption{Accuracy of top prediction for the true solution corresponding to the crossword clue.}
+	\caption{Fig. 2: Accuracy of top prediction for the true solution corresponding to the crossword clue.}
 \end{figure}
 
 Since these accuracy values are not very high for crossword clues, we then reveal the top 10 predicted words for crossword clues as opposed to simply the top predicted word for each definition, so that we can determine whether our model was in the ballpark for a larger number of words than it appeared. We redefine our accuracy metric to be the ratio of top 10 predicted words that contain the correct target word to the total number of input word definitions. The accuracies are as follows:
 
 \begin{figure}
 	\includegraphics{top10cross}
-	\label{Fig 3}
-	\caption{Accuracy of top 10 predictions for the true solution corresponding to the crosswordclue.}
+	\caption{Fig. 3: Accuracy of top 10 predictions for the true solution corresponding to the crosswordclue.}
 \end{figure}
 
 These accuracy values are significantly better than the prior metric. We then see that adjusting our evaluation metrics can refine our model’s predictions better than adjusting our actual model can. For the crossword application of our model, we develop two new accuracy metrics to do so based on the extra information that is inherent to crosswords:
@@ -168,28 +165,24 @@ This approach results in the following accuracies for our crossword clue test se
 
 \begin{figure}
 	\includegraphics{top10len}
-	\label{Fig 4}
-	\caption{Accuracy of top the prediction for the true solution corresponding to the crossword clue given the true solution length.}
+	\caption{Fig. 4: Accuracy of top the prediction for the true solution corresponding to the crossword clue given the true solution length.}
 \end{figure}
 
 \begin{figure}
 	\includegraphics{top10char}
-	\label{Fig 5}
-	\caption{Accuracy of the top prediction for the true solution corresponding to the crossword clue given a random character in the true solution.}
+	\caption{Fig. 5: Accuracy of the top prediction for the true solution corresponding to the crossword clue given a random character in the true solution.}
 \end{figure}
 
 Since many of these accuracies were less than the top 10 general predictions, which was contrary to our hypothesis, we expanded our sample size to n=50 to improve our accuracy:
 
 \begin{figure}
 	\includegraphics{top50len}
-	\label{Fig 4}
-	\caption{Accuracy of the top prediction for the true solution corresponding to the crossword clue given the true solution length.}
+	\caption{Fig. 6: Accuracy of the top prediction for the true solution corresponding to the crossword clue given the true solution length.}
 \end{figure}
 
 \begin{figure}
 	\includegraphics{top50char}
-	\label{Fig 6}
-	\caption{Accuracy of the top prediction for the true solution corresponding to the crossword clue given a random character in the true solution.}
+	\caption{FIg. 7: Accuracy of the top prediction for the true solution corresponding to the crossword clue given a random character in the true solution.}
 \end{figure}
 
 
