--- a/paper/report.tex
+++ b/paper/report.tex
@@ -5,7 +5,7 @@
 %\documentstyle[nips13submit_09,times,art10]{article} % For LaTeX 2.09
 
 
-\title{Formatting Instructions for NIPS 2013}
+\title{Reversing Dictionaries and Solving Crossword Clues with Deep Learning}
 
 
 \author{
